--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" type="text/css" href="static/styles/style.css">
+    <link rel="stylesheet" type="text/css" href="../static/styles/style.css">
     <title>Guaita TikTok</title>
 </head>
 <body>
@@ -27,7 +27,7 @@
                         Tasks
                         </a>
                         <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">New Task</a></li>
+                        <li><a class="dropdown-item" href="/newTask">New Task</a></li>
                         <li><a class="dropdown-item" href="#">My Tasks</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="/logout">Task Example</a></li>
@@ -55,7 +55,7 @@
                 <h1>Let's start with <span>Guaita TikTok</span></h1>
                 <p>Guaita TikTok is a sophisticated web application designed for comprehensive monitoring of the TikTok social network. It facilitates in-depth tracking and analysis of diverse content themes and topics, along with user-generated comments. Users can create customized tasks to follow specific themes and categorize them based on various criteria such as irony, humor, anger, happiness, and more. The application leverages advanced natural language models to accurately classify content, ensuring a nuanced understanding of user interactions and sentiment across the platform.   
                 </p>
-                <a href="#">
+                <a href="/newTask">
                     <i class='bx bx-task'></i>
                     <span>Start a Task</span>
                 </a>
