--- a/static/templates/newTask.html
+++ b/static/templates/newTask.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="../static/styles/styleNewTask.css">
     <title>Guaita TikTok</title>
 </head>
@@ -54,43 +55,42 @@
             <h2>Create a new Task</h2>
             <div class="form-control">
                 <label for="name">Task Name</label>
-                <input type="text" id="name" placeholder="Enter your task name" autocomplete="off">
+                <input type="text" id="name" placeholder="Enter your task name" autocomplete="off" required>
                 <i class="icon"></i>
             </div>
 
             <div class="form-control">
                 <label for="description">Description</label>
-                <input type="text" id="description" placeholder="Explain a description for the task" autocomplete="off">
+                <input type="text" id="description" placeholder="Explain a description for the task" autocomplete="off" required>
                 <i class="icon"></i>
             </div>
 
             <div class="form-control">
-                <label for="tags">Tags</label>
-                <input type="text" id="tags" placeholder="Enter your tags for the search" autocomplete="off">
-                <i class="icon"></i>
-            </div>
-
-            <div class="form-control">
-                <label for="password">Password</label>
-                <input type="password" id="password" placeholder="Enter your password" autocomplete="off">
+                <div class="input-group">
+                    <label for="tags">Tags</label>
+                    <span class="info-icon" data-info='Please enter the tags you want separated by commas. For example: "politics, economy, health..."'>
+                        <i class='bx bx-info-circle' ></i>
+                    </span>
+                </div>
+                <input type="text" id="tags" placeholder="Enter your tags for the search" autocomplete="off" required>
                 <i class="icon"></i>
             </div>
 
             <div class="form-control">
                 <label for="message">Message</label>
-                <textarea id="message" placeholder="Enter your message"></textarea>
+                <textarea id="message" placeholder="Enter your message" required></textarea>
                 <i class="icon"></i>
             </div>
             
             <div class="form-control">
                 <label for="startDate">Start Date</label>
-                <input type="date" id="startDate" name="startDate" autocomplete="off">
+                <input type="date" id="startDate" name="startDate" autocomplete="off" required>
                 <i class="icon"></i>
             </div>
     
             <div class="form-control">
                 <label for="endDate">End Date</label>
-                <input type="date" id="endDate" name="endDate" autocomplete="off">
+                <input type="date" id="endDate" name="endDate" autocomplete="off" required>
                 <i class="icon"></i>
             </div>
 
