--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -13,7 +13,7 @@
     {% if current_user.is_authenticated %}
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #24334c;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/login">GuaitaTikTok</a>
+                <a class="navbar-brand" href="/index">GuaitaTikTok</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
