--- a/static/templates/newTask.html
+++ b/static/templates/newTask.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #24334c;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="/login">GuaitaTikTok</a>
+            <a class="navbar-brand" href="/index">GuaitaTikTok</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -51,17 +51,17 @@
     </nav>
     <div class="container">
         
-        <form id="mainForm" novalidate>
+        <form id="mainForm" method="POST" action="/newTask">
             <h2>Create a new Task</h2>
             <div class="form-control">
                 <label for="name">Task Name</label>
-                <input type="text" id="name" placeholder="Enter your task name" autocomplete="off" required>
+                <input type="text" name="name" id="name" placeholder="Enter your task name" autocomplete="off" required>
                 <i class="icon"></i>
             </div>
 
             <div class="form-control">
                 <label for="description">Description</label>
-                <input type="text" id="description" placeholder="Explain a description for the task" autocomplete="off" required>
+                <input type="text" name="description" id="description" placeholder="Explain a description for the task" autocomplete="off" required>
                 <i class="icon"></i>
             </div>
 
@@ -72,18 +72,21 @@
                         <i class='bx bx-info-circle' ></i>
                     </span>
                 </div>
-                <input type="text" id="tags" placeholder="Enter your tags for the search" autocomplete="off" required>
+                <input type="text" name="tags" id="tags" placeholder="Enter your tags for the search" autocomplete="off" required>
                 <i class="icon"></i>
             </div>
 
             <div class="form-control">
                 <label for="message">Message</label>
-                <textarea id="message" placeholder="Enter your message" required></textarea>
+                <textarea id="message" name="message" placeholder="Enter your message" required></textarea>
                 <i class="icon"></i>
             </div>
             
             <div class="form-control">
                 <label for="startDate">Start Date</label>
+                {% if wrongDate %}
+                    <p style="color: red;">{{ wrongDate }}</p>
+                {% endif %}
                 <input type="date" id="startDate" name="startDate" autocomplete="off" required>
                 <i class="icon"></i>
             </div>
@@ -96,26 +99,52 @@
 
             <div class="form-control">
                 <label for="language">Language</label>
-                <select id="language">
+                <select id="language" name="language">
                     <option value="spanish">Spanish</option>
                     <option value="english">English</option>
                 </select>
                 <i class="icon"></i>
             </div>
 
-            <button type="submit">Submit</button>
+            <button type="submit">Create Task</button>
 
         </form>
     </div>
 
+    {% if createdTask %}
     <div id="successModal" class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
-            <h2>Success!</h2>
-            <p>Your form has been submitted successfully.</p>
+            <h2 style="color: green";>Success!</h2>
+            <p>{{ createdTask }}</p>
         </div>
     </div>
+    {% endif %}
+
+    {% if errorTask %}
+    <div id="successModal" class="modal">
+        <div class="modal-content">
+            <span class="close-button">&times;</span>
+            <h2 style="color: red;">Error!</h2>
+            <p>{{ errorTask }}</p>
+        </div>
+    </div>
+    {% endif %}
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script>
+    const modal = document.getElementById('successModal');
+
+    const closeBtn = document.querySelector('.close-button');
+    closeBtn.onclick = function () {
+        modal.style.display = 'none';
+    };
+
+    window.onclick = function (event) {
+        if (event.target === modal) {
+            modal.style.display = 'none';
+        }
+    };
+</script>
 </html>
