Vista de tareas

--- a/static/templates/newTask.html
+++ b/static/templates/newTask.html
@@ -26,8 +26,8 @@
                     Tasks
                     </a>
                     <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">New Task</a></li>
-                    <li><a class="dropdown-item" href="#">My Tasks</a></li>
+                    <li><a class="dropdown-item" href="/newTask">New Task</a></li>
+                    <li><a class="dropdown-item" href="/tasksView">My Tasks</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="/logout">Task Example</a></li>
                     </ul>
