--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -28,7 +28,7 @@
                         </a>
                         <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="/newTask">New Task</a></li>
-                        <li><a class="dropdown-item" href="#">My Tasks</a></li>
+                        <li><a class="dropdown-item" href="/tasksView">My Tasks</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="/logout">Task Example</a></li>
                         </ul>
