--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -216,3 +216,33 @@ a {
     margin-top: 10px;
     cursor: pointer;
 }
+
+
+.taskReview {
+    background-color: rgb(77, 25, 221);
+    color: #fff;
+    font-size: 15px;
+    padding: 10px 45px;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    margin-top: 10px;
+    cursor: pointer;
+}
+
+h1 {
+    align-items: center;
+    justify-content: center;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+td {
+    text-align: left;
+    vertical-align: middle;
+    padding: 8px; /* Añade un poco de relleno para mejorar la apariencia */
+}
